horizontal scrolling fix

--- a/src/css/animation/_section-slider.scss
+++ b/src/css/animation/_section-slider.scss
@@ -1,3 +1,7 @@
+body{
+  overflow-x: hidden;
+}
+
 #slider-wrapper {
   position: relative;
 }
